Potential fix for pull request finding 'CodeQL / Deprecated method or constructor invocation'
Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>